--- a/movil/src/global.scss
+++ b/movil/src/global.scss
@@ -31,4 +31,11 @@
     font-weight: normal;
     src: url('./assets/fonts/CourierPrime-Bold.ttf');
 }
+ion-content{
+  --background: url(./assets/img/fondo.jpg) 0 0/100% 100% no-repeat;
+}
+ion-toolbar{
+  --ion-toolbar-background-color: transparent;
+  --ion-toolbar-text-color: white;
+}
 $font-poppins-r:"courierP-B";
