--- a/movil/src/app/tabs/tabs.page.html
+++ b/movil/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="home" routerLink="/home">
+    <ion-tab-button tab="home" routerLink="/mis-casas">
 
       <ion-icon name="home"></ion-icon>
       <ion-label>Inicio</ion-label>
