--- a/movil/src/global.scss
+++ b/movil/src/global.scss
@@ -32,7 +32,7 @@
     src: url('./assets/fonts/CourierPrime-Bold.ttf');
 }
 ion-content{
-  --background: url(./assets/img/fondo.jpg) 0 0/100% 100% no-repeat;
+  --background: url(./assets/img/fondo2.png) 0 0/100% 100% no-repeat;
 }
 ion-toolbar{
   --ion-toolbar-background-color: transparent;
