--- a/movil/src/app/tabs/tabs.page.html
+++ b/movil/src/app/tabs/tabs.page.html
@@ -13,9 +13,9 @@
         <ion-label>predicciones</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="perfil" routerLink="">
+      <ion-tab-button tab="perfil" routerLink="/perfil">
         <ion-icon name="construct"></ion-icon>
-        <ion-label>configuracion</ion-label>
+        <ion-label>perfil</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
