--- a/movil/src/app/app.component.html
+++ b/movil/src/app/app.component.html
@@ -1,4 +1,24 @@
 <ion-app>
 
   <ion-router-outlet></ion-router-outlet>
+  
+  <!-- <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home" routerLink="/mis-casas">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="categoria" routerLink="/prediccion">
+        <ion-icon name="duplicate"></ion-icon>
+        <ion-label>predicciones</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="perfil" routerLink="">
+        <ion-icon name="construct"></ion-icon>
+        <ion-label>configuracion</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs> -->
+
 </ion-app>
