--- a/movil/src/app/home/home.page.html
+++ b/movil/src/app/home/home.page.html
@@ -1,1 +1,25 @@
-<h1>hol </h1>
+
+<ion-content>
+    <!-- <div class="background-container">
+      <img src="/assets/imagenes/fondo2.png" height="100%" width="100%" alt="">
+    </div> -->
+      <div class="contenedor-principal">
+        <div class="contenido">
+          <ion-text color="primary">
+            <h2>
+              <!-- <img class="logo" src="/assets/imagenes/logo.png" > -->
+            Bienvenidos
+            <br>a
+            <br>Predict  <font style="color: goldenrod;">$ </font>  House
+            </h2>
+          </ion-text>
+        </div>
+      </div>
+      <div class="spinner-container">
+        <ion-spinner name="lines"></ion-spinner>
+      </div>
+      <app-tabs></app-tabs>
+  </ion-content>
+  
+  
+  
