--- a/movil/src/app/mis-casas/mis-casas.page.html
+++ b/movil/src/app/mis-casas/mis-casas.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>mis casas</ion-title>
+  <ion-toolbar class="T">
+    <ion-title class="Ti">Mis casas</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -73,5 +73,6 @@
     Here's a small text description for the card content. Nothing more, nothing less.
   </ion-card-content>
 </ion-card>
+
 </ion-content>
 
