--- a/movil/src/app/register/register.page.scss
+++ b/movil/src/app/register/register.page.scss
@@ -1,6 +1,16 @@
 /* Importing fonts from Google */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+/* Reseting */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+
+  }
+
+
 .wrapper {
     max-width: 350px;
     min-height: 500px;
@@ -33,6 +43,7 @@
     letter-spacing: 1.3px;
     padding-left: 10px;
     color: #555;
+    background-image: url("/src/assets/img/fondo2.png");
 }
 
 .wrapper .form-field input {
@@ -62,7 +73,7 @@
     box-shadow: none;
     width: 100%;
     height: 40px;
-    background-color: #7175b5;
+    background-color: #03A9F4;
     color: #fff;
     border-radius: 25px;
     box-shadow: 3px 3px 3px #b1b1b1,
@@ -71,17 +82,17 @@
 }
 
 .wrapper .btn:hover {
-    background-color: #7175b5;
+    background-color: #039BE5;
 }
 
 .wrapper a {
     text-decoration: none;
     font-size: 0.8rem;
-    color: #7175b5;
+    color: #03A9F4;
 }
 
 .wrapper a:hover {
-    color: #7175b5;
+    color: #039BE5;
 }
 
 @media(max-width: 380px) {
@@ -89,4 +100,7 @@
         margin: 30px 20px;
         padding: 40px 15px 15px 15px;
     }
+}
+body {
+  background-image: url("/src/assets/img/fondo2.png");
 }
