--- a/movil/src/app/tabs/tabs.page.html
+++ b/movil/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+
   <ion-tabs>
     <ion-tab-bar slot="bottom">
 
@@ -13,12 +13,12 @@
         <ion-label>predicciones</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="perfil" routerLink="/perfil">
+      <ion-tab-button tab="perfil" routerLink="">
         <ion-icon name="construct"></ion-icon>
-        <ion-label>perfil</ion-label>
+        <ion-label>configuracion</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
   </ion-tabs>
-</ion-content>
+
 
