--- a/movil/src/app/login/login.page.html
+++ b/movil/src/app/login/login.page.html
@@ -10,13 +10,13 @@
   <form class="p-3 mt-3">
       <div class="form-field d-flex align-items-center">
           <span class="far fa-user"></span>
-          <input type="text" name="userName" id="userName" placeholder="Usuario">
+          <input type="text" name="userName" id="userName" placeholder="Username">
       </div>
       <div class="form-field d-flex align-items-center">
           <span class="fas fa-key"></span>
-          <input type="password" name="password" id="pwd" placeholder="Contraseña">
+          <input type="password" name="password" id="pwd" placeholder="Password">
       </div>
-      <button class="btn mt-3"  routerLink="/home">Iniciar sesion</button>
+      <button class="btn mt-3"  routerLink="/tabs">Inisiar sesion</button>
       <button class="btn mt-3"  routerLink="/register">Registrarse</button>
   </form>
 </div>
