--- a/movil/src/app/tabs/tabs.page.html
+++ b/movil/src/app/tabs/tabs.page.html
@@ -2,10 +2,15 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
 
-      <ion-tab-button tab="home" routerLink="/mis-casas">
+      <ion-tab-button tab="home" routerLink="/home">
 
         <ion-icon name="home"></ion-icon>
         <ion-label>Inicio</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="categoria" routerLink="/categorias">
+        <ion-icon name="layers"></ion-icon>
+        <ion-label>categorias</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="categoria" routerLink="/prediccion">
@@ -14,7 +19,7 @@
       </ion-tab-button>
 
       <ion-tab-button tab="perfil" routerLink="/perfil">
-        <ion-icon name="construct"></ion-icon>
+        <ion-icon name="person"></ion-icon>
         <ion-label>perfil</ion-label>
       </ion-tab-button>
 
