--- a/movil/src/app/prediccion/prediccion.page.html
+++ b/movil/src/app/prediccion/prediccion.page.html
@@ -4,12 +4,12 @@
   <div class="wrapper">
     <header>
       <div class="file-upload">
-        <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+        <button class="file-upload-btn" >Subir imagen</button>
 
         <div class="image-upload-wrap">
           <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
           <div class="drag-text">
-            <h3>Drag and drop a file or select add Image</h3>
+            <h3>Arrastra y suelta un archivo o selecciona para agregar una imagen</h3>
           </div>
         </div>
         <div class="file-upload-content">
