--- a/movil/src/app/prediccion/prediccion.page.scss
+++ b/movil/src/app/prediccion/prediccion.page.scss
@@ -1,10 +1,4 @@
-body {
-  background-color: #363940;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  position: relative;
-}
+
 
 .wrapper  {
   background-color: #4f75c11f;
@@ -23,67 +17,14 @@ header {
   margin-bottom: 20px;
   display: flex;
 }
-h1 {
-  flex: 1;
-  padding: 0;
-  margin: 0;
-  font-size: 16px;
-  letter-spacing: 1px;
-  font-weight: 700;
-  color: #7A7B7F;
-}
+
 header span {
   flex: 1;
   text-align: right;
   font-size: 12px;
   color: #999;
 }
-.ways ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  border-radius: 5px;
-  overflow: hidden;
-}
-.ways li {
-  align-self: center;
-  flex: 1;
-  background-color: #F5F7FA;
-  text-align: center;
-  cursor: pointer;
-  padding: 15px 0;
-  color: #999;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 12px;
-  letter-spacing: 1px;
-  border: 1px solid #ddd;
-}
 
-.ways li:first-child {
-  border-right: 0;
-}
-.ways li:last-child {
-  border-left: 0;
-}
-.ways li.active {
-  border: 2px solid #1AA1E5;
-  color: #66676C;
-}
-.ways li.active::before {
-  content: '\f00c';
-  font-family: 'fontawesome';
-  color: #1AA1E5;
-}
-.ways li:not(.active) {
-  padding: 16px 0;
-}
-section {
-  display: none;
-}
-section.active {
-  display: block;
-}
 section input,
 section textarea {
   display: block;
@@ -101,111 +42,6 @@ section textarea {
 }
 section select {
   display: none;
-}
-
-.select-option {
-  background-color: #F5F7FA;
-  color: #999;
-  font-size: 15px;
-  position: relative;
-  cursor: pointer;
-}
-.select-option::before {
-  content: '\f107';
-  font-family: 'fontawesome';
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-top: 9px;
-  margin-right: 10px;
-  font-size: 20px;
-}
-.select-option div:not(.option) {
-  padding: 10px 10px;
-  border: 1px solid #ddd;
-}
-.select-option div:last-child,
-.select-option .head {
-  border-bottom: 1px solid #ddd;
-}
-.select-option .option {
-  display: none;
-}
-.select-option .option div {
-  text-transform: capitalize;
-}
-.select-option.active .option {
-  display: block;
-  position: absolute;
-  width: 100%;
-  background-color: #F5F7FA;
-  box-sizing: border-box;
-  padding: 0;
-  margin-top: -1px;
-  z-index: 2;
-}
-.select-option .option div {
-  border-bottom: 0;
-}
-.images {
-  display: flex;
-  flex-wrap:  wrap;
-  margin-top: 20px;
-}
-.images .img,
-.images .pic {
-  flex-basis: 31%;
-  margin-bottom: 10px;
-  border-radius: 4px;
-}
-.images .img {
-  width: 112px;
-  height: 93px;
-  background-size: cover;
-  margin-right: 10px;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-}
-.images .img:nth-child(3n) {
-  margin-right: 0;
-}
-.images .img span {
-  display: none;
-  text-transform: capitalize;
-  z-index: 2;
-}
-.images .img::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  transition: opacity .1s ease-in;
-  border-radius: 4px;
-  opacity: 0;
-  position: absolute;
-}
-.images .img:hover::after {
-  display: block;
-  background-color: #000;
-  opacity: .5;
-}
-.images .img:hover span {
-  display: block;
-  color: #fff;
-}
-.images .pic {
-  background-color: #F5F7FA;
-  align-self: center;
-  text-align: center;
-  padding: 40px 0;
-  text-transform: uppercase;
-  color: #848EA1;
-  font-size: 12px;
-  cursor: pointer;
 }
 
 
@@ -304,39 +140,10 @@ section select {
   padding: 60px 0;
 }
 
-.file-upload-image {
-  max-height: 200px;
-  max-width: 200px;
-  margin: auto;
-  padding: 20px;
-}
 
-.remove-image {
-  width: 200px;
-  margin: 0;
-  color: #fff;
-  background: #cd4535;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #b02818;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700;
-}
 
-.remove-image:hover {
-  background: #c13b2a;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer;
-}
 
-.remove-image:active {
-  border: 0;
-  transition: all .2s ease;
-}
+
 
 
 
@@ -345,10 +152,9 @@ section select {
   background-color: #7175b5;
 }
 
-
 .wrapper .btn {
   box-shadow: none;
-
+  margin-left: 30px;
   height: 40px;
   background-color: #7175b5;
   color: #fff;
