--- a/movil/src/app/prediccion/prediccion.page.html
+++ b/movil/src/app/prediccion/prediccion.page.html
@@ -53,8 +53,8 @@
             <option>Option 5</option>
           </select>
       </div>
-      <button class="btn mt-3"  routerLink="/tabs">Inisiar sesion</button>
-      <button class="btn mt-3"  routerLink="/register">Registrarse</button>
+      <button class="btn mt-3"  routerLink="/tabs">predecir</button>
+      <button class="btn mt-3"  routerLink="/register">publicar</button>
 
     </div>
   </div>
