--- a/movil/src/app/login/login.page.html
+++ b/movil/src/app/login/login.page.html
@@ -1,23 +1,22 @@
-
 <ion-content>
-<div class="wrapper">
-  <div class="logo">
-      <img src="./assets/img/logo.png" alt="">
-  </div>
-  <div class="text-center mt-4 name">
-      INICIAR SESION
-  </div>
-  <form class="p-3 mt-3">
-      <div class="form-field d-flex align-items-center">
+  <div class="wrapper">
+    <div class="logo">
+        <img src="./assets/img/logo.png" alt="">
+    </div>
+    <div class="text-center mt-4 name">
+        INICIAR SESION
+    </div>
+    <form class="p-3 mt-3"  [formGroup]="formulariologin" (submit)="login(formulariologin)" >
+        <div class="form-field d-flex align-items-center">
           <span class="far fa-user"></span>
-          <input type="text" name="userName" id="userName" placeholder="Username">
-      </div>
-      <div class="form-field d-flex align-items-center">
+          <input  formControlName="username" id="username2" placeholder="Usuario">
+        </div>
+        <div class="form-field d-flex align-items-center">
           <span class="fas fa-key"></span>
-          <input type="password" name="password" id="pwd" placeholder="Password">
-      </div>
-      <button class="btn mt-3"  routerLink="/tabs">Inisiar sesion</button>
-      <button class="btn mt-3"  routerLink="/register">Registrarse</button>
-  </form>
-</div>
+          <input formControlName="password" type="password" id="password" placeholder="Contraseña">
+        </div>
+        <button class="btn mt-3"  >Iniciar sesion</button>
+        <button class="btn mt-3"  routerLink="/register">Registrarse</button>
+    </form>
+  </div>
 </ion-content>
