--- a/movil/src/app/login/login.page.scss
+++ b/movil/src/app/login/login.page.scss
@@ -73,4 +73,11 @@
 .wrapper .btn:hover {
     background-color: #7175b5;
 }
+.validar{
+  color: red;
+  background-color: red;
+}
+p{
+  color: red;
 
+}
