--- a/movil/src/app/perfil/perfil.page.html
+++ b/movil/src/app/perfil/perfil.page.html
@@ -10,7 +10,10 @@
         <div class="area2 p- text-center px-3">
           <div class="image mr-3"> <img src="https://i.imgur.com/ZSkeqnd.jpg"
               class="rounded-circle" width="100" />
-            <h4 class=" name mt-3 ">Anna Watson</h4>
+            <h4 class=" name mt-3 ">
+              <div *ngIf="username">{{ username }}</div>
+              <div *ngIf="email">{{ email }}</div>
+            </h4>
            <div class="wizard">
                 <nav class="list-group list-group-flush">
 
@@ -34,8 +37,8 @@
 
                   <a class="list-group-item" href="#">
                     <div class="d-flex justify-content-between align-items-center">
-                      <div>
-                        <i class="fa fa-heart mr-1 text-muted"></i>
+                      <div  (click)="logout()">
+                        <i class="fa fa-heart mr-1 text-muted" ></i>
                         cerrar sesion
                       </div>
                     </div>
