--- a/movil/src/app/register/register.page.scss
+++ b/movil/src/app/register/register.page.scss
@@ -90,3 +90,19 @@
         padding: 40px 15px 15px 15px;
     }
 }
+p{
+  color: red;
+
+}
+h5{
+  color: blue;
+}
+
+.custom-toast {
+  background-color: #ffcc00;
+  color: #ffffff;
+  font-size: 16px;
+  border-radius: 8px;
+  padding: 12px;
+}
+
